# capslockrs

./: Cargo.toml  README.md  build.rs  reference.ahk  resources.rc
.github/workflows/: release-windows-x64.yml
src/: engine.rs  input.rs  install.rs  logging.rs  main.rs  tray.rs
