[package]
name = "capslockrs"
version = "0.1.0"
edition = "2024"
description = "A hard-coded, high-reliability CapsLock remapper for Windows"
license = "MIT"

[dependencies]
anyhow = "1.0"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_TaskScheduler",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-resource = "3.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
